# PhoneBookDatabase

./: README.md
Client/: CMakeLists.txt  main.cpp
Client/include/: Client.h
Client/src/: Client.cpp
Server/: CMakeLists.txt
Server/include/: Server.h
Server/src/: Server.cpp
db_config/: dump.sql
